-Fixed Carousel -Fixed Aesthetics on homepage -Fixed About Us page -Start fixing Officers page

--- a/_includes/aboutContent.html
+++ b/_includes/aboutContent.html
@@ -1,50 +1,33 @@
 <div class="container-fluid top-buffer" id="aboutContainer">
+	<div class ="aboutcontent">
+  <h1> About Us</h1>
+	<p>Founded in 2010, Rutgers Triathlon is a club sports team of Rutgers University centered on the New Brunswick campus. </p>
+	</br>
+	<p>Our goal is to create a close-knit group of friends who strive to compete in Triathlon, while pursuing their degree at RU.
+		We are competitive in the Northeast Collegiate Triathlon Conference, and have raced at Collegiate Nationals as a team since 2014.
+	</p></br>
+	<p>Feel free to contact us at any time via email: <a href="mailto:rutgerstriteam@gmail.com"> rutgerstriteam@gmail.com</a></p>
 
-	<!-- Coaching Panel -->
-	<div class="panel panel-info">
-  		<div class="panel-heading">Coach Sean Reilly</div>
-  		<div class="panel-body">
-    		<div class="media">
-    			<div class="media-left">
-    				<img class="media-object member-image" src="/img/aboutUsCoach.jpg"/>
-    			</div>
-    		</div>
-  		</div>
-	</div>
-
-	<!-- Biking -->
+  </br>
 	<div class="panel panel-info">
   		<div class="panel-heading">General Club Information</div>
   		<div class="panel-body">
-    		<div class="media">
-    			<div class="media-right">
-    				<img class="media-object member-image" src="/img/aboutUsCanon.jpg"/>
-    			</div>
-    		</div>
+    				<img class="media-object" src="img/aboutUsCanon.jpg"/>
   		</div>
 	</div>
-
-	<!-- General Practice -->
 	<div class="panel panel-info">
   		<div class="panel-heading">Practice Makes Perfect!</div>
   		<div class="panel-body">
-    		<div class="media">
-    			<div class="media-left">
-    				<img class="media-object member-image" src="/img/aboutUsSwimming.jpg"/>
-    			</div>
-    		</div>
+    				<img class="media-object" src="img/aboutUsSwimming.jpg"/>
   		</div>
 	</div>
 
-	<!-- ExtraC -->
 	<div class="panel panel-info">
   		<div class="panel-heading">Extracurricular</div>
   		<div class="panel-body">
-    		<div class="media">
-    			<div class="media-right">
-    				<img class="media-object member-image" src="/img/aboutUsSnowboarding.jpg"/>
-    			</div>
-    		</div>
+    				<img class="media-object" src="img/aboutUsSnowboarding.jpg" width=600px/>
   		</div>
 	</div>
+
+</div>
 </div>
