--- a/_includes/officersList.html
+++ b/_includes/officersList.html
@@ -1,1 +1,9 @@
-<div class="container-fluid top-buffer" id="OfficerPageList"/>
+<div class="container-fluid top-buffer">
+  <div class ="officercontent">
+    <div class="panel panel-info">
+        <div class="panel-heading">General Club Information</div>
+        <div class="panel-body">
+              <img class="media-object" src="img/aboutUsCanon.jpg"/>
+        </div>
+    </div>
+  </div>
