--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,8 +12,8 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-inverse navbar-right">
+    <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1" style="border-radius:0px; background-image:none;">
+      <ul class="nav navbar-nav navbar-inverse navbar-right" style ="background-image:none;">
         <!-- <li id="homeNavBarItem" class="active"><a href="/index.html">Home<span class="sr-only">(current)</span></a></li> -->
         <li id="joinNavBarItem"><a href="join.html">Join</a></li>
         <!-- <li id="sponsorsNavBarItem"><a href="/sponsors.html">Sponsors</a></li> -->
