--- a/_layouts/officersLayout.html
+++ b/_layouts/officersLayout.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>{{ page.title }} - Rutgers Triathlon Team</title>
 
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="/css/main.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -17,6 +17,7 @@
   <body>
     {% include navbar.html %}
     {% include officersList.html %}
+    
   </body>
 
   <!-- <script src="js/jquery-2.1.3.min.js"/> -->
