-Edited text and fixed style of join.html -Edited text adn fixed style of officers.html -Edited text of practice schedule / officers / adn races on index.html

--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -3,9 +3,52 @@
   <div class="row">
     <div class="col-md-4">
       <div class="panel panel-info">
-        <div class="panel-heading"><h3>Summer Practice Schedule</h3></div>
+        <div class="panel-heading"><h3>Spring 2016 Practice Schedule</h3></div>
         <div class="panel-body">
-          <ul class="list-group" id="PracticeList"/>
+          <ul class="list-group"/>
+          <li class="list-group-item">
+            <b>Sunday: </b>
+            <br>
+            <b>Post any ideas! </b>
+          </li>
+            <li class="list-group-item">
+              <b>Monday: </b>
+              8:30 - 10:00PM
+              <br>
+              Swim at Cook Rec Center with <b>Jess</b>
+            </li>
+            <li class="list-group-item">
+              <b>Tuesday: </b>
+              4:30PM
+              <br>
+              Run at University Park with <b>Sarah & Jess</b>
+            </li>
+            <li class="list-group-item">
+              <b>Wednesday: </b>
+              8:30pm - 10:00pm
+              <br>
+              Swim at Cook Rec Center with <b>Mike & Casey</b>
+            </li>
+            <li class="list-group-item">
+              <b>Thursday: </b>
+              <br>
+              Team Spin Session or RU Fit Class? <b>See FB</b>
+            </li>
+            <li class="list-group-item">
+              <b>Friday: </b>
+              8am
+              <br>
+              Swim at Werblin Rec Center with <b>Kyle</b>
+              </br>
+              4:15pm
+              </br>
+              Run at 4:15pm with the Running Club
+            </li>
+            <li class="list-group-item">
+              <b>Saturday: </b>
+              <br>
+              Outdoor Cycling! <b>Post any ideas!</b>
+            </li>
         </div><!-- panelBody -->
       </div><!-- panel -->
     </div><!-- col -->
@@ -13,7 +56,19 @@
       <div class="panel panel-danger">
         <div class="panel-heading"><h3 class="center-text">Upcoming Races</h3></div>
         <div class="panel-body">
-          <ul class="list-group" id="RaceList"/>
+          <ul class="list-group"/>
+            <li class="list-group-item">
+              <b>MSU Indoor Triathlon</b> - 02/21/16
+            </li>
+            <li class="list-group-item">
+              <b>West Point Duathlon</b> - 04/02/16
+            </li>
+            <li class="list-group-item">
+              <b>Rutgers UNITE Half 8k&Marathon</b> - 04/17/16
+            </li>
+            <li class="list-group-item">
+              <b>USAT National Championships</b> - 05/01/16
+            </li>
         </div><!-- panelBody -->
       </div><!-- panel -->
     </div><!-- col -->
@@ -21,7 +76,34 @@
       <div class="panel panel-info">
         <div class="panel-heading"><h3>Officers</h3></div>
         <div class="panel-body">
-          <ul class="list-group" id="OfficerList"/>
+          <ul class="list-group"/>
+          <li class="list-group-item">
+            <b>Kyle Boehme</b> - President
+          </li>
+          <li class="list-group-item">
+            <b>Olivia Gentilini</b> - Treasurer
+          </li>
+          <li class="list-group-item">
+            <b>Tina Chen</b> - Social Manager
+          </li>
+          <li class="list-group-item">
+            <b>Nikki Chu</b> - Race Coordinator
+          </li>
+          <li class="list-group-item">
+            <b>Michael Rivero</b> - Clothing / Design Manager
+          </li>
+          <li class="list-group-item">
+            <b>Liz Chang</b> - Fundraising Director
+          </li>
+          <li class="list-group-item">
+            <b>Sarah Chang</b> - Practice Captain
+          </li>
+          <li class="list-group-item">
+            <b>Jessica DiFabbio</b> - Practice Captain
+          </li>
+          <li class="list-group-item">
+            <b>Casey Jones</b> - Practice Captain
+          </li>
         </div><!-- panelBody -->
       </div><!-- panel -->
     </div><!-- col -->
