--- a/_includes/joinContent.html
+++ b/_includes/joinContent.html
@@ -1,12 +1,22 @@
 <div class="container-fluid top-buffer" id="joinContainer">
-	<div class="jumbotron">
+	<!--<div  class="jumbotron">
 		<h1 style="padding-left:20px">How To Join : </h1>
 		<br/>
 		<ul>
-			<li><h2>Join our <a href="https://www.facebook.com/groups/274413140871/">Facebook page</a></h2></li>
+			<li><h2>Join our <a href="https://www.facebook.com/groups/274413140871/">Facebook page</a> for more information!</h2></li>
 			<li ><h2>Come to <a href="http://rutgerstriathlon.com/index.html">Practice</a></h2></li>
 		</ul>
 		<br/>
 		<h3 style="padding-left:20px">Optional : Send us an <a href="rutgerstriteam@gmail.com">email</a> introducing yourself! Ask us questions that you may have!</h3>
-	</div>
+	</div>-->
+	<div class ="joincontent">
+	</br>
+</br>
+  <h1> How To Join : </h1>
+	<ul>
+		<li><h2>Join our <a href="https://www.facebook.com/groups/274413140871/">Facebook page</a> for more information!</h2></li>
+		<li ><h2>Come to <a href="http://rutgerstriathlon.com/index.html">Practice</a></h2></li>
+	</ul>
+	Questions? Email us at : <a href="mailto:rutgerstriteam@gmail.com"> rutgerstriteam@gmail.com</a></p>
+
 </div>
