--- a/_includes/carouselDisplay.html
+++ b/_includes/carouselDisplay.html
@@ -4,6 +4,8 @@
             <li data-target="#photoCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#photoCarousel" data-slide-to="1"></li>
             <li data-target="#photoCarousel" data-slide-to="2"></li>
+            <li data-target="#photoCarousel" data-slide-to="3"></li>
+            <li data-target="#photoCarousel" data-slide-to="4"></li>
         </ol>
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
