--- a/_layouts/officersLayout.html
+++ b/_layouts/officersLayout.html
@@ -17,13 +17,15 @@
   <body>
     {% include navbar.html %}
     {% include officersList.html %}
-    
+
   </body>
 
   <!-- <script src="js/jquery-2.1.3.min.js"/> -->
   <!---->
   <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
   <script src="js/firebase.js"></script>
+  <script src="js/jquery-2.1.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script type="text/javascript">
   retrieveAndPopulateOfficerDataForOfficersPage();
   updateNavbarToOfficersPage();
