Text updates to about page and join page. Some updates for mobile. Pages respond to resizing, but not on load on mobile devices.

--- a/_includes/officersList.html
+++ b/_includes/officersList.html
@@ -1,5 +1,17 @@
 <div class="container-fluid top-buffer">
   <div class ="officercontent">
+
+    <h1>Officers</h1>
+    <div class ="imgwrap">
+      <img src ="img/RU_MSUIndoorTri2016.jpg">
+      <div class='description'>
+      <!-- description content -->
+        <p class='description_content'>Rutgers Triathlon Team competing at the MSU Indoor Triathlon</p>
+      <!-- end description content -->
+      </div>
+    </div>
+
+  </br></br>
     <div class="panel panel-danger">
         <div class="panel-heading"><b>Kyle Boehme</b> - President</div>
         <div class="panel-body">
@@ -55,3 +67,4 @@
         </div>
     </div>
   </div>
+</div>
