Added footer to each page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
     {% include parallaxDisplay.html %}
     {% include indexBottomPanel.html %}
   </body>
+  {% include footer.html %}
 
   <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
   <script src="js/firebase.js"></script>
