--- a/_layouts/aboutLayout.html
+++ b/_layouts/aboutLayout.html
@@ -18,6 +18,7 @@
     {% include navbar.html %}
     {% include aboutContent.html %}
   </body>
+  {% include footer.html %}
 
   <!-- <script src="js/jquery-2.1.3.min.js"/> -->
   <!---->
