--- a/_layouts/officersLayout.html
+++ b/_layouts/officersLayout.html
@@ -19,6 +19,7 @@
     {% include officersList.html %}
 
   </body>
+  {% include footer.html %}
 
   <!-- <script src="js/jquery-2.1.3.min.js"/> -->
   <!---->
