--- a/_includes/officersList.html
+++ b/_includes/officersList.html
@@ -12,59 +12,79 @@
     </div>
 
   </br></br>
-    <div class="panel panel-danger">
-        <div class="panel-heading"><b>Kyle Boehme</b> - President</div>
+    <div class ="col-md-6">
+    <div class="panel panel-danger left">
+        <div class="panel-heading"><img class="media-object" src="img/KyleBoehme.png"/><p></br><b>Kyle Boehme</b></br>President</p></div>
         <div class="panel-body">
-              <img class="media-object" src=""/>
+
+              <p>Hey, I'm Kyle Boehme. President of the Rutgers Triathlon Team. I began my triathlon career just before my freshman year and love the leadership roles that I have taken on with this team. Over the years I have gathered a lot of ideas and technique tips that I will happily share, to help you become a better swimmer, biker, or runner. Feel free to reach out to me if you have any questions about the team!</p>
         </div>
     </div>
-    <div class="panel panel-danger">
-        <div class="panel-heading"><b>Olivia Gentilini</b> - Treasurer</div>
+  </div>
+  <div class ="col-md-6">
+    <div class="panel panel-danger right">
+        <div class="panel-heading"><img class="media-object" src="img/OliviaGentilini.png"/><p></br><b>Olivia Gentilini</b></br>Treasurer</p></div>
         <div class="panel-body">
-              <img class="media-object" src=""/>
+
+              <p>Hi! I'm Olivia a junior and the Treasurer for the Triathlon Team. This is my third year on the team and love every second of it, especially when we play sharks and minos instead of practicing. This coming year I'm hoping to get fast and strong enough to beat our prez Kyle at Nationals! Come out to practices and get fast with me!</p>
         </div>
     </div>
-    <div class="panel panel-danger">
-        <div class="panel-heading"><b>Tina Chen</b> - Social Manager</div>
+  </div>
+
+
+    <div class ="col-md-6">
+    <div class="panel panel-danger left">
+        <div class="panel-heading"><img class="media-object" src="img/TinaChen.png"/><p></br><b>Tina Chen</b></br>Social Manager</p></div>
         <div class="panel-body">
-              <img class="media-object" src=""/>
+              <p>Hey guys! I'm Tina, a junior majoring in Nutritional science. I'm the team's social chair. I ran track in high school and now I'm Tri-ing!</p>
         </div>
     </div>
-    <div class="panel panel-danger">
-        <div class="panel-heading"><b>Nikki Chu</b> - Race Coordinator</div>
+    </div>
+    <div class ="col-md-6">
+    <div class="panel panel-danger right">
+        <div class="panel-heading"><img class="media-object" src="img/ProfilePic.png"/><p></br><b>Nikki Chu</b></br>Race Coordinator</p></div>
         <div class="panel-body">
-              <img class="media-object" src=""/>
         </div>
     </div>
-    <div class="panel panel-danger">
-        <div class="panel-heading"><b>Michael Rivero</b> - Clothing / Design Manager</div>
+    </div>
+    <div class ="col-md-6">
+    <div class="panel panel-danger left">
+        <div class="panel-heading"><img class="media-object" src="img/MichaelRivero.png"/><p></br><b>Michael Rivero</b></br>Clothing / Design Manager</p></div>
         <div class="panel-body">
-              <img class="media-object" src=""/>
+              <p>My name is Michael Rivero and I am the Design Manager for the Rutgers University Triathlon Club. I am currently a Junior pursuing a major in the Arts with a minor in Entrepreneurship. I swam for three years in high school and needed to compete in one way or another once I entered this University. During the summer before my junior year I decided to jump into triathlon and fell in love with the sport, so I joined the club when the semester began and haven’t looked back!</p>
         </div>
     </div>
-    <div class="panel panel-danger">
-        <div class="panel-heading"><b>Liz Chang</b> - Fundraising Director</div>
+    </div>
+    <div class ="col-md-6">
+    <div class="panel panel-danger right">
+        <div class="panel-heading"><img class="media-object" src="img/ProfilePic.png"/><p></br><b>Liz Chang</b></br>Fundraising Director</p></div>
         <div class="panel-body">
-              <img class="media-object" src=""/>
+              <p>Liz is a junior studying mechanical engineering. She joined the team the summer before freshman year and has served as both the Clothing/Design Manager and the Fundraising Director. With the team she has completed a sprint distance triathlon, an Olympic distance triathlon, and an open-water mile. Her least hated part of the race is always the swim. She hopes to race more in the future and improve on her run and bike.</p>
         </div>
     </div>
-    <div class="panel panel-danger">
-        <div class="panel-heading"><b>Sarah Chang</b> - Practice Captain</div>
+    </div>
+    <div class ="col-md-6">
+    <div class="panel panel-danger left">
+        <div class="panel-heading"><img class="media-object" src="img/ProfilePic.png"/><p></br><b>Sarah Chang</b></br>Practice Captain</p></div>
         <div class="panel-body">
-              <img class="media-object" src=""/>
+              <p>Hey I'm Sarah! Ran cross country and track throughout high school with minimal bike and swim experience. At the involvement fair looking for a running group to join and somehow stumbled upon the team and decided to check them out. Seemed intimidating at first, not knowing a single person, but everyone's so welcoming and full of passion it was hard not to love the team. Joined Fall 2014 and decided to buy a bike that spring. Began racing Summer 2015. Raced 3 sprints and 6 olympics so far and still counting.</p>
         </div>
     </div>
-    <div class="panel panel-danger">
-        <div class="panel-heading"><b>Jessica DiFabbio</b> - Practice Captain</div>
+    </div>
+    <div class ="col-md-6">
+    <div class="panel panel-danger right">
+        <div class="panel-heading"><img class="media-object" src="img/ProfilePic.png"/><p></br><b>Jessica DiFabbio</b></br>Practice Captain</p></div>
         <div class="panel-body">
-              <img class="media-object" src=""/>
         </div>
     </div>
-    <div class="panel panel-danger">
-        <div class="panel-heading"><b>Casey Jones</b> - Practice Captain</div>
+    </div>
+    <div class ="col-md-6">
+    <div class="panel panel-danger left">
+        <div class="panel-heading"><img class="media-object" src="img/CaseyJones.png"/><p></br><b>Casey Jones</b></br>Practice Captain</p></div>
         <div class="panel-body">
-              <img class="media-object" src=""/>
+              <p>My name is Casey and I will be a sophomore at RU this fall. I am majoring in marine science with the School of Arts and Sciences and I am dedicated to my studies. However I also care a lot about my training and having fun so I go to most of the practices and love to hang out with the team. I am a practice captain as well so I like to help the newer members out whenever I can.</p>
         </div>
+    </div>
     </div>
   </div>
 </div>
