--- a/css/main.css
+++ b/css/main.css
@@ -248,6 +248,7 @@ Officer Page
 {
   margin-left:20%;
   margin-right:20%;
+  overflow:auto;
 }
 
 .officercontent h1
@@ -256,9 +257,15 @@ Officer Page
   border-bottom: 2px solid #cc0033;
 }
 
+.officercontent .panel-heading p
+{
+    font-size:25px;
+    text-align:center;
+}
+
 .officercontent p
 {
-    font-size:20px;
+  font-size:20px;
 }
 
 .officercontent .imgwrap
@@ -290,6 +297,26 @@ Officer Page
     text-align:center;
 }
 
+.officercontent .col-md-6
+{
+  padding:0px;
+  overflow:auto;
+}
+
+.officercontent .panel
+{
+  height:1100px;
+}
+
+.officercontent .right
+{
+  margin-left:5px;
+}
+
+.officercontent .left
+{
+  margin-right:5px;
+}
 /*
 Join Page
 */
