Updated Race schedule and Officer list on homepage

--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -91,9 +91,6 @@
               <b>Lake George Triathlon Festival</b> - 09/03/16
             </li>
             <li class="list-group-item">
-              <b>Mightyman Sprint / Olympic Triathlon (Nationals Qualifier)</b> - 09/10/16
-            </li>
-            <li class="list-group-item">
               <b>Hightstown Triathlon (Out of Conference)</b> - 09/11/16
             </li>
             <li class="list-group-item">
@@ -137,6 +134,9 @@
           </li>
           <li class="list-group-item">
             <b>Casey Jones</b> - Practice Captain
+          </li>
+          <li class="list-group-item">
+            <b>Raymond Fullon</b> - Webmaster
           </li>
         </div><!-- panelBody -->
       </div><!-- panel -->
