--- a/_includes/officersList.html
+++ b/_includes/officersList.html
@@ -65,7 +65,7 @@
     </div>
     <div class ="col-md-6">
     <div class="panel panel-danger left">
-        <div class="panel-heading"><img class="media-object" src="img/ProfilePic.png"/><p></br><b>Sarah Chang</b></br>Practice Captain</p></div>
+        <div class="panel-heading"><img class="media-object" src="img/SarahChang.png"/><p></br><b>Sarah Chang</b></br>Practice Captain</p></div>
         <div class="panel-body">
               <p>Hey I'm Sarah! Ran cross country and track throughout high school with minimal bike and swim experience. At the involvement fair looking for a running group to join and somehow stumbled upon the team and decided to check them out. Seemed intimidating at first, not knowing a single person, but everyone's so welcoming and full of passion it was hard not to love the team. Joined Fall 2014 and decided to buy a bike that spring. Began racing Summer 2015. Raced 3 sprints and 6 olympics so far and still counting.</p>
         </div>
