Updated practice schedule and added information meeting info

--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -1,14 +1,22 @@
 <div class="container">
   <hr>
+  <div class ="row">
+    <div class ="col-md-12">
+      <div class ="panel panel-info">
+        <div class ="panel-heading">
+          <h3>
+            There will be a General Information Meeting for the Fall 2016 Semester on Sunday September 11, 2016 at 6pm in the College Ave Gym (CAG) Rm# 202! Come out and see what we're all about!
+          </h3>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="row">
     <div class="col-md-4">
       <div class="panel panel-info">
-        <div class="panel-heading"><h3>Summer/Spring 2016</br> Practice Schedule</h3></div>
+        <div class="panel-heading"><h3>Fall 2016 Practice Schedule</h3></div>
         <div class="panel-body">
           <ul class="list-group"/>
-          <li class ="list-group-item">
-            <b>For the Summer Practice Schedule</br> please check the <a href ="https://www.facebook.com/groups/274413140871/">Facebook Page</a></b>
-          </li>
           <li class="list-group-item">
             <b>Sunday: </b>
             <br>
@@ -50,7 +58,7 @@
             <li class="list-group-item">
               <b>Saturday: </b>
               <br>
-              Outdoor Cycling! <b>Post any ideas!</b>
+              Outdoor Cycling! </br><b>Post any ideas!</b>
             </li>
         </div><!-- panelBody -->
       </div><!-- panel -->
@@ -60,26 +68,6 @@
         <div class="panel-heading"><h3 class="center-text">Upcoming Races</h3></div>
         <div class="panel-body">
           <ul class="list-group"/>
-            <h4 class ="list-group-item-heading">Summer</h4>
-            <li class="list-group-item">
-              <b>Jersey Genesis</b> - 05/21/16
-            </li>
-            <li class="list-group-item">
-              <b>Lincoln Park Triathlon</b> - 06/26/16
-            </li>
-            <li class="list-group-item">
-              <b>Lake Waramaug</b> - 07/16/16
-            </li>
-            <li class="list-group-item">
-              <b>Tri Mountain Lake</b> - 07/16/16
-            </li>
-            <li class="list-group-item">
-              <b>Jersey Girl Triathlon</b> - 08/07/16
-            </li>
-            <li class="list-group-item">
-              <b>Rev3 Poconos Mountains</b> - 08/07/16
-            </li>
-          </br>
             <h4 class ="list-group-item-heading">NECTC Schedule</h4>
             <li class="list-group-item">
               <b>Cranberry Sprint Trifest</b> - 08/20/16
