Updated Officers List, Prac Schedule and removed GIM update

--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -1,6 +1,6 @@
 <div class="container">
   <hr>
-  <div class ="row">
+<!--  <div class ="row">
     <div class ="col-md-12">
       <div class ="panel panel-info">
         <div class ="panel-heading">
@@ -10,7 +10,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="row">
     <div class="col-md-4">
       <div class="panel panel-info">
@@ -26,39 +26,39 @@
               <b>Monday: </b>
               8:30 - 10:00PM
               <br>
-              Swim at Cook Rec Center with <b>Jess</b>
+              Swim at Cook Rec Center with </br><b>Kyle, Liz & Sarah</b>
             </li>
             <li class="list-group-item">
               <b>Tuesday: </b>
-              4:30PM
+              5:00PM
               <br>
-              Run at University Park with <b>Sarah & Jess</b>
+              Run at University Park with </br><b>Nikki, Tina and Kyle</b>
             </li>
             <li class="list-group-item">
               <b>Wednesday: </b>
               8:30pm - 10:00pm
               <br>
-              Swim at Cook Rec Center with <b>Mike & Casey</b>
+              Swim at Cook Rec Center with <b>Jess & Casey</b>
             </li>
             <li class="list-group-item">
               <b>Thursday: </b>
               <br>
-              Team Spin Session or RU Fit Class? <b>See FB</b>
+              Team Spin Session or RU Fit Class <b>See FB</b>
             </li>
             <li class="list-group-item">
               <b>Friday: </b>
               8am
               <br>
-              Swim at Werblin Rec Center with <b>Kyle</b>
+              Swim at Werblin Rec Center with <b>Jess & Jason</b>
               </br>
               4:15pm
               </br>
-              Run at 4:15pm with the Running Club
+              Run at 4:15pm with the Running Club <b>& Liz</b>
             </li>
             <li class="list-group-item">
-              <b>Saturday: </b>
+              <b>Saturday: </b> 9am
               <br>
-              Outdoor Cycling! </br><b>Post any ideas!</b>
+              Outdoor Cycling! with <b>Kyle / Tina</b>
             </li>
         </div><!-- panelBody -->
       </div><!-- panel -->
@@ -107,9 +107,6 @@
           </li>
           <li class="list-group-item">
             <b>Nikki Chu</b> - Race Coordinator
-          </li>
-          <li class="list-group-item">
-            <b>Michael Rivero</b> - Clothing / Design Manager
           </li>
           <li class="list-group-item">
             <b>Liz Chang</b> - Fundraising Director
