Added members page on menu. Changed to dropdown menu. Added javascript for dropdown on hover

--- a/_includes/parallaxDisplay.html
+++ b/_includes/parallaxDisplay.html
@@ -1,5 +1,5 @@
 <section class="bg-1 text-center">
-	<h1><span class="red-font">Rutgers</span> Triathlon</h1>
-	<p class="lead">Swim <span class="red-font">Bike</span> Run</p>
+	<h1><span style="color: #cc0033;">Rutgers</span> Triathlon</h1>
+	<p class="lead">Swim <span style="color: #cc0033;">Bike</span> Run</p>
 	{% include carouselDisplay.html %}
 </section>
