--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
   <script src="js/firebase.js"></script>
   <script src="js/jquery-2.1.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/dropdownonhover.js"></script>
   <script type="text/javascript">
    retrieveAndPopulatePracticeData();
    retrieveAndPopulateOfficerData();
