Added Members Section: Practice and Race Schedule and Results page. Removed Prac_Race_Officer list from homepage. Added Recent Update Section to homepage. Added Strava, Facebook Page, and twitter widgets to homepage. Changed display images for About page, Results page, Race page, Schedule page.

--- a/_includes/aboutContent.html
+++ b/_includes/aboutContent.html
@@ -2,10 +2,10 @@
 <div class ="aboutcontent">
   <h1>About Us</h1>
 	<div class ="imgwrap">
-		<img src ="img/RU_SwimPrac2016.jpg">
+		<img src ="img/AboutUsPoolNoodles.png">
 		<div class='description'>
 		<!-- description content -->
-			<p class='description_content'>Swim Practice!</p>
+			<p class='description_content'>End of Semester Fun at the Pool!</p>
 		<!-- end description content -->
 		</div>
 	</div>
