--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -1,131 +1,20 @@
 <div class="container">
-  <hr>
-<!--  <div class ="row">
-    <div class ="col-md-12">
-      <div class ="panel panel-info">
-        <div class ="panel-heading">
-          <h3>
-            There will be a General Information Meeting for the Fall 2016 Semester on Sunday September 11, 2016 at 6pm in the College Ave Gym (CAG) Rm# 202! Come out and see what we're all about!
-          </h3>
-        </div>
-      </div>
+</br>
+<div class ="newsAndWidg">
+<div class ="row">
+    <div class ="col-md-8">
+      <h1>Recent Update</h1>
+      <p><b>November 3, 2016</b></p>
+      <p>Welcome to the new and shiny update section of the Rutgers Triathlon Team! Here we'll be posting updates about our races and general announcements. This will soon be filled out with some news about this past fall 2016 season.</p>
     </div>
-  </div> -->
-  <div class="row">
-    <div class="col-md-4">
-      <div class="panel panel-info">
-        <div class="panel-heading"><h3>Fall 2016 Practice Schedule</h3></div>
-        <div class="panel-body">
-          <ul class="list-group"/>
-          <li class="list-group-item">
-            <b>Sunday: </b>
-            <br>
-            <b>Post any ideas! </b>
-          </li>
-            <li class="list-group-item">
-              <b>Monday: </b>
-              8:30 - 10:00PM
-              <br>
-              Swim at Cook Rec Center with </br><b>Kyle, Liz & Sarah</b>
-            </li>
-            <li class="list-group-item">
-              <b>Tuesday: </b>
-              5:00PM
-              <br>
-              Run at University Park with </br><b>Nikki, Tina and Kyle</b>
-            </li>
-            <li class="list-group-item">
-              <b>Wednesday: </b>
-              8:30pm - 10:00pm
-              <br>
-              Swim at Cook Rec Center with <b>Jess & Casey</b>
-            </li>
-            <li class="list-group-item">
-              <b>Thursday: </b>
-              <br>
-              Team Spin Session or RU Fit Class <b>See FB</b>
-            </li>
-            <li class="list-group-item">
-              <b>Friday: </b>
-              8am
-              <br>
-              Swim at Werblin Rec Center with <b>Jess & Jason</b>
-              </br>
-              4:15pm
-              </br>
-              Run at 4:15pm with the Running Club <b>& Liz</b>
-            </li>
-            <li class="list-group-item">
-              <b>Saturday: </b> 9am
-              <br>
-              Outdoor Cycling! with <b>Kyle / Tina</b>
-            </li>
-        </div><!-- panelBody -->
-      </div><!-- panel -->
-    </div><!-- col -->
-    <div class="col-md-4">
-      <div class="panel panel-danger">
-        <div class="panel-heading"><h3 class="center-text">Upcoming Races</h3></div>
-        <div class="panel-body">
-          <ul class="list-group"/>
-            <h4 class ="list-group-item-heading">NECTC Schedule</h4>
-            <li class="list-group-item">
-              <b>Cranberry Sprint Trifest</b> - 08/20/16
-            </li>
-            <li class="list-group-item">
-              <b>Rev3 Maine</b> - 08/28/16
-            </li>
-            <li class="list-group-item">
-              <b>Lake George Triathlon Festival</b> - 09/03/16
-            </li>
-            <li class="list-group-item">
-              <b>Hightstown Triathlon (Out of Conference)</b> - 09/11/16
-            </li>
-            <li class="list-group-item">
-              <b>Buzzard's Bay</b> - 09/18/16
-            </li>
-            <li class="list-group-item">
-              <b>Westchester Triathlon</b> - 09/25/16
-            </li>
-
-        </div><!-- panelBody -->
-      </div><!-- panel -->
-    </div><!-- col -->
-    <div class="col-md-4">
-      <div class="panel panel-info">
-        <div class="panel-heading"><h3>Officers</h3></div>
-        <div class="panel-body">
-          <ul class="list-group"/>
-          <li class="list-group-item">
-            <b>Kyle Boehme</b> - President
-          </li>
-          <li class="list-group-item">
-            <b>Olivia Gentilini</b> - Treasurer
-          </li>
-          <li class="list-group-item">
-            <b>Tina Chen</b> - Social Manager
-          </li>
-          <li class="list-group-item">
-            <b>Nikki Chu</b> - Race Coordinator
-          </li>
-          <li class="list-group-item">
-            <b>Liz Chang</b> - Fundraising Director
-          </li>
-          <li class="list-group-item">
-            <b>Sarah Chang</b> - Practice Captain
-          </li>
-          <li class="list-group-item">
-            <b>Jessica DiFabbio</b> - Practice Captain
-          </li>
-          <li class="list-group-item">
-            <b>Casey Jones</b> - Practice Captain
-          </li>
-          <li class="list-group-item">
-            <b>Raymond Fullon</b> - Webmaster
-          </li>
-        </div><!-- panelBody -->
-      </div><!-- panel -->
-    </div><!-- col -->
-  </div><!--/row-->
-  <hr>
+    <div class =col-md-4>
+      <iframe height='454' width=100% frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/clubs/RutgersTriathlon/latest-rides/7e71c1ac0f76b046c3f81fa3ff24e5cac143cdae?show_rides=true'>
+      </iframe>
+    </br></br>
+      <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FRutgersTriathlonTeam%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width=100% height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    </br></br>
+      <a class="twitter-timeline" data-height="400" data-theme="light" data-link-color="#cc0033" href="https://twitter.com/RutgersTriTeam">Tweets by RutgersTriTeam</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+  </div>
+</div>
 </div><!--/container-->
