--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,13 +16,13 @@
       <ul class="nav navbar-nav navbar-inverse navbar-right" style ="background-image:none;">
         <!-- <li id="homeNavBarItem" class="active"><a href="/index.html">Home<span class="sr-only">(current)</span></a></li> -->
         <li id="joinNavBarItem"><a href="join.html">Join</a></li>
-        <li id="sponsorsNavBarItem"><a href="sponsors.html">Sponsors</a></li>
+        <!--<li id="sponsorsNavBarItem"><a href="sponsors.html">Sponsors</a></li>-->
         <li id="membersNavBarItem" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Members<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Race Schedule</a></li>
-            <li><a href="#">Practice Schedule</a></li>
-            <li><a href="#">Results</a></li>
+            <li id="pracschedNavBarItem"><a href="pracschedule.html">Practice Schedule</a></li>
+            <li id="raceschedNavBarItem"><a href="raceschedule.html">Race Schedule</a></li>
+            <li id="resultsNavBarItem"><a href="results.html">Results</a></li>
           </ul>
         </li>
         <li id="officersNavBarItem"><a href="officers.html">Officers</a></li>
