--- a/_layouts/pracLayout.html
+++ b/_layouts/pracLayout.html
@@ -16,8 +16,7 @@
   </head>
   <body>
     {% include navbar.html %}
-    {% include officersList.html %}
-
+    {% include pracContent.html %}
   </body>
   {% include footer.html %}
 
@@ -29,6 +28,7 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/dropdownonhover.js"></script>
   <script type="text/javascript">
-  updateNavbarToOfficersPage();
+   updateNavbarToPracPage();
+   updateNavbarToMembersPage();
   </script>
 </html>
