--- a/_layouts/raceLayout.html
+++ b/_layouts/raceLayout.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <title>{{ page.title }} - Rutgers Triathlon Team</title>
 
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="/css/main.css" rel="stylesheet">
-    <link href="/css/material.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -17,8 +16,9 @@
   </head>
   <body>
     {% include navbar.html %}
-    {% include membersList.html %}
+    {% include raceContent.html %}
   </body>
+  {% include footer.html %}
 
   <!-- <script src="js/jquery-2.1.3.min.js"/> -->
   <!---->
@@ -26,8 +26,9 @@
   <script src="js/firebase.js"></script>
   <script src="js/jquery-2.1.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/dropdownonhover.js"></script>
   <script type="text/javascript">
-   retrieveAndPopulateMemberData();
+   updateNavbarToRacePage();
    updateNavbarToMembersPage();
   </script>
 </html>
