--- a/css/main.css
+++ b/css/main.css
@@ -373,6 +373,65 @@ Join Page
     text-align:center;
 }
 
+/*Race Content*/
+
+.racecontent
+{
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.racecontent h1
+{
+  font-size:60px;
+  border-bottom: 2px solid #cc0033;
+}
+
+.racecontent h2
+{
+  font-size:40px;
+  border-bottom: 2px solid #cc0033;
+}
+
+.racecontent h3
+{
+  font-size:25px;
+}
+
+.racecontent p
+{
+    font-size:20px;
+}
+
+.racecontent .imgwrap
+{
+  position:relative;
+}
+
+.racecontent img
+{
+  width:100%;
+  position:relative;
+}
+
+.racecontent .description
+{
+    position:absolute; /* absolute position (so we can position it where we want)*/
+    font-size:15px;
+    color:black;
+    opacity:0.8; /* transparency */
+    filter:alpha(opacity=60); /* IE transparency */
+    background: white;
+    bottom:0px;
+    width:100%;
+}
+.racecontent .description_content
+{
+    padding:10px;
+    margin:0px;
+    text-align:center;
+}
+
 .panel-body
 {
   display: flex;
@@ -383,6 +442,17 @@ Join Page
 .panel-body img
 {
   max-width:100%
+}
+
+.newsAndWidg h1
+{
+  font-size:60px;
+  border-bottom:2px solid #cc0033;
+}
+
+.newsAndWidg p
+{
+  font-size:25px;
 }
 
 @media(max-width:768px)
