Slight text change in homepage

--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -3,7 +3,7 @@
 <div class ="newsAndWidg">
 <div class ="row">
     <div class ="col-md-8">
-      <h1>Recent Update</h1>
+      <h1>Recent Updates</h1>
       <p><b>November 3, 2016</b></p>
       <p>Welcome to the new and shiny update section of the Rutgers Triathlon Team! Here we'll be posting updates about our races and general announcements. This will soon be filled out with some news about this past fall 2016 season.</p>
     </div>
