Added post about indoor tri. Added indoor triathlon webpage for information, details, rules, and schedule. Added pictures for new post and pictures for indoor race.

--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -4,6 +4,17 @@
 <div class ="row">
     <div class ="col-md-8">
       <h1>Recent Updates</h1>
+      <p><b>November 4, 2016</b></p>
+      <div class ="imgwrapper">
+    		<img src ="img/RU_IndoorTriFlyer.jpg" width="80%">
+    		<div class='description'>
+    		<!-- description content -->
+    		<!-- end description content -->
+    		</div>
+    	</div>
+</br>
+      <p>The Rutgers Triathlon Team is proud to announce that we are hosting the first Rutgers Indoor Triathlon! The event will take place on November 13, 2016 at the Werblin Recreation Center starting at 12pm. For more information and details click <a href ="RU_indoortriathlon.html">here!!</a> If you're all set to go click <a href ="http://getinvolved.tix.com/Event.aspx?EventCode=912142">here to register!!</a> Hope to see you there!! Registration is open to racers of all levels, especially beginners. <b>Dare to Tri!</b></p></br>
+
       <p><b>November 3, 2016</b></p>
       <p>Welcome to the new and shiny update section of the Rutgers Triathlon Team! Here we'll be posting updates about our races and general announcements. This will soon be filled out with some news about this past fall 2016 season.</p>
     </div>
