--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,6 +15,7 @@
     <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1" style="border-radius:0px; background-image:none;">
       <ul class="nav navbar-nav navbar-inverse navbar-right" style ="background-image:none;">
         <!-- <li id="homeNavBarItem" class="active"><a href="/index.html">Home<span class="sr-only">(current)</span></a></li> -->
+        <li id="indoortriItem"><a href="RU_indoortriathlon.html">Indoor Triathlon</a>
         <li id="joinNavBarItem"><a href="join.html">Join</a></li>
         <!--<li id="sponsorsNavBarItem"><a href="sponsors.html">Sponsors</a></li>-->
         <li id="membersNavBarItem" class="dropdown">
