--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,16 +8,24 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="img/triathlonLogo.png"></a>
+      <a class="navbar-brand" href="http://rutgerstriathlon.com/"><img src="img/triathlonLogo.png"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1" style="border-radius:0px; background-image:none;">
       <ul class="nav navbar-nav navbar-inverse navbar-right" style ="background-image:none;">
         <!-- <li id="homeNavBarItem" class="active"><a href="/index.html">Home<span class="sr-only">(current)</span></a></li> -->
+        <li id="indoortriItem"><a href="RU_indoortriathlon.html">Indoor Triathlon</a>
         <li id="joinNavBarItem"><a href="join.html">Join</a></li>
-        <!-- <li id="sponsorsNavBarItem"><a href="/sponsors.html">Sponsors</a></li> -->
-        <!-- <li id="membersNavBarItem"><a href="members.html">Members</a></li> -->
+        <!--<li id="sponsorsNavBarItem"><a href="sponsors.html">Sponsors</a></li>-->
+        <li id="membersNavBarItem" class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Members<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li id="pracschedNavBarItem"><a href="pracschedule.html">Practice Schedule</a></li>
+            <li id="raceschedNavBarItem"><a href="raceschedule.html">Race Schedule</a></li>
+            <li id="resultsNavBarItem"><a href="results.html">Results</a></li>
+          </ul>
+        </li>
         <li id="officersNavBarItem"><a href="officers.html">Officers</a></li>
         <!-- <li id="newsNavBarItem"><a href="news.html">News</a></li> -->
         <!-- <li id="contactNavBarItem"><a href="/contact.html">Contact</a></li> -->
