--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,11 +19,13 @@
     {% include parallaxDisplay.html %}
     {% include indexBottomPanel.html %}
   </body>
+  {% include footer.html %}
 
   <script src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
   <script src="js/firebase.js"></script>
   <script src="js/jquery-2.1.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/dropdownonhover.js"></script>
   <script type="text/javascript">
    retrieveAndPopulatePracticeData();
    retrieveAndPopulateOfficerData();
