--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -1,112 +1,31 @@
 <div class="container">
-  <hr>
-  <div class="row">
-    <div class="col-md-4">
-      <div class="panel panel-info">
-        <div class="panel-heading"><h3>Spring 2016 Practice Schedule</h3></div>
-        <div class="panel-body">
-          <ul class="list-group"/>
-          <li class="list-group-item">
-            <b>Sunday: </b>
-            <br>
-            <b>Post any ideas! </b>
-          </li>
-            <li class="list-group-item">
-              <b>Monday: </b>
-              8:30 - 10:00PM
-              <br>
-              Swim at Cook Rec Center with <b>Jess</b>
-            </li>
-            <li class="list-group-item">
-              <b>Tuesday: </b>
-              4:30PM
-              <br>
-              Run at University Park with <b>Sarah & Jess</b>
-            </li>
-            <li class="list-group-item">
-              <b>Wednesday: </b>
-              8:30pm - 10:00pm
-              <br>
-              Swim at Cook Rec Center with <b>Mike & Casey</b>
-            </li>
-            <li class="list-group-item">
-              <b>Thursday: </b>
-              <br>
-              Team Spin Session or RU Fit Class? <b>See FB</b>
-            </li>
-            <li class="list-group-item">
-              <b>Friday: </b>
-              8am
-              <br>
-              Swim at Werblin Rec Center with <b>Kyle</b>
-              </br>
-              4:15pm
-              </br>
-              Run at 4:15pm with the Running Club
-            </li>
-            <li class="list-group-item">
-              <b>Saturday: </b>
-              <br>
-              Outdoor Cycling! <b>Post any ideas!</b>
-            </li>
-        </div><!-- panelBody -->
-      </div><!-- panel -->
-    </div><!-- col -->
-    <div class="col-md-4">
-      <div class="panel panel-danger">
-        <div class="panel-heading"><h3 class="center-text">Upcoming Races</h3></div>
-        <div class="panel-body">
-          <ul class="list-group"/>
-            <li class="list-group-item">
-              <b>MSU Indoor Triathlon</b> - 02/21/16
-            </li>
-            <li class="list-group-item">
-              <b>West Point Duathlon</b> - 04/02/16
-            </li>
-            <li class="list-group-item">
-              <b>Rutgers UNITE Half 8k&Marathon</b> - 04/17/16
-            </li>
-            <li class="list-group-item">
-              <b>USAT National Championships</b> - 05/01/16
-            </li>
-        </div><!-- panelBody -->
-      </div><!-- panel -->
-    </div><!-- col -->
-    <div class="col-md-4">
-      <div class="panel panel-info">
-        <div class="panel-heading"><h3>Officers</h3></div>
-        <div class="panel-body">
-          <ul class="list-group"/>
-          <li class="list-group-item">
-            <b>Kyle Boehme</b> - President
-          </li>
-          <li class="list-group-item">
-            <b>Olivia Gentilini</b> - Treasurer
-          </li>
-          <li class="list-group-item">
-            <b>Tina Chen</b> - Social Manager
-          </li>
-          <li class="list-group-item">
-            <b>Nikki Chu</b> - Race Coordinator
-          </li>
-          <li class="list-group-item">
-            <b>Michael Rivero</b> - Clothing / Design Manager
-          </li>
-          <li class="list-group-item">
-            <b>Liz Chang</b> - Fundraising Director
-          </li>
-          <li class="list-group-item">
-            <b>Sarah Chang</b> - Practice Captain
-          </li>
-          <li class="list-group-item">
-            <b>Jessica DiFabbio</b> - Practice Captain
-          </li>
-          <li class="list-group-item">
-            <b>Casey Jones</b> - Practice Captain
-          </li>
-        </div><!-- panelBody -->
-      </div><!-- panel -->
-    </div><!-- col -->
-  </div><!--/row-->
-  <hr>
+</br>
+<div class ="newsAndWidg">
+<div class ="row">
+    <div class ="col-md-8">
+      <h1>Recent Updates</h1>
+      <p><b>November 4, 2016</b></p>
+      <div class ="imgwrapper">
+    		<img src ="img/RU_IndoorTriFlyer.jpg" width="80%">
+    		<div class='description'>
+    		<!-- description content -->
+    		<!-- end description content -->
+    		</div>
+    	</div>
+</br>
+      <p>The Rutgers Triathlon Team is proud to announce that we are hosting the first Rutgers Indoor Triathlon! The event will take place on November 13, 2016 at the Werblin Recreation Center starting at 12pm. For more information and details click <a href ="RU_indoortriathlon.html">here!!</a> If you're all set to go click <a href ="http://getinvolved.tix.com/Event.aspx?EventCode=912142">here to register!!</a> Hope to see you there!! Registration is open to racers of all levels, especially beginners. <b>Dare to Tri!</b></p></br>
+
+      <p><b>November 3, 2016</b></p>
+      <p>Welcome to the new and shiny update section of the Rutgers Triathlon Team! Here we'll be posting updates about our races and general announcements. This will soon be filled out with some news about this past fall 2016 season.</p>
+    </div>
+    <div class =col-md-4>
+      <iframe height='454' width=100% frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/clubs/RutgersTriathlon/latest-rides/7e71c1ac0f76b046c3f81fa3ff24e5cac143cdae?show_rides=true'>
+      </iframe>
+    </br></br>
+      <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FRutgersTriathlonTeam%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width=100% height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    </br></br>
+      <a class="twitter-timeline" data-height="400" data-theme="light" data-link-color="#cc0033" href="https://twitter.com/RutgersTriTeam">Tweets by RutgersTriTeam</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+  </div>
+</div>
 </div><!--/container-->
