--- a/_layouts/aboutLayout.html
+++ b/_layouts/aboutLayout.html
@@ -18,6 +18,7 @@
     {% include navbar.html %}
     {% include aboutContent.html %}
   </body>
+  {% include footer.html %}
 
   <!-- <script src="js/jquery-2.1.3.min.js"/> -->
   <!---->
@@ -25,6 +26,7 @@
   <script src="js/firebase.js"></script>
   <script src="js/jquery-2.1.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/dropdownonhover.js"></script>
   <script type="text/javascript">
    updateNavbarToAboutPage();
   </script>
