Added entry for RU Indoor Tri. Added results for race. Added picture for entry.

--- a/_includes/indoorContent.html
+++ b/_includes/indoorContent.html
@@ -13,6 +13,7 @@
 	</br>
 	</br>
   <p class="quickinfo">
+    <a href ="#results">Results!</a></br></br>
     <b>Date:</b> Sunday, November 2016</br>
     <b>Time:</b> 12pm - 1:30pm</br>
     <b>Location:</b> Werblin Recreation Center on Busch Campus</br>
@@ -130,9 +131,251 @@
 Piscataway, NJ 08854</br>
 Phone: (848) 932-0701</br>
 <a href="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=656+Bartholomew+Road+Piscataway+NJ+08854">Map & Directions</a></br></br>
-
 Questions? Worried about raceday? Interested to volunteer?</br>
 <a href="mailto:rutgerstriteam@gmail.com">Email the Rutgers Triathlon team here.</a>
 </p>
+
+<p id="results" class="quickinfo"><b>Results</b></p>
+
+<h3 style ="text-align:center;">Male</h2>
+<table style="width:100%">
+  <tr>
+    <th>Wave #</th>
+    <th>Athlete #</th>
+    <th>Last Name</th>
+    <th>First Name</th>
+    <th>Awards</th>
+    <th>Swim </br>Lengths</th>
+    <th>Bike Miles</th>
+    <th>Run Laps</th>
+    <th>Total Distance </br>(appx)</th>
+    <th>Total Weighted <br>Result</th>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>10</td>
+    <td>Kupferberg</td>
+    <td>Jacob</td>
+    <td>#1 M. Overall</td>
+    <td>36</td>
+    <td>13.2</td>
+    <td>12.5</td>
+    <td>16.32</td>
+    <td>24.63</td>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>6</td>
+    <td>Schwartz</td>
+    <td>Todd</td>
+    <td>#1 M. Bike</td>
+    <td>33</td>
+    <td>16.1</td>
+    <td>11.25</td>
+    <td>18.91</td>
+    <td>24.46</td>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>2</td>
+    <td>DeGregorio</td>
+    <td>Ryan</td>
+    <td>#1 M. Run</td>
+    <td>28</td>
+    <td>12.8</td>
+    <td>15.25</td>
+    <td>16.37</td>
+    <td>23.88</td>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>7</td>
+    <td>He</td>
+    <td>Lefan</td>
+    <td>#1 M. Swim</td>
+    <td>36</td>
+    <td>11.1</td>
+    <td>12.5</td>
+    <td>14.22</td>
+    <td>23.59</td>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>5</td>
+    <td>Goldsmith</td>
+    <td>Jack</td>
+    <td></td>
+    <td>16</td>
+    <td>11.6</td>
+    <td>8.5</td>
+    <td>13.60</td>
+    <td>15.66</td>
+  </tr>
+</table>
+
+<h3 style ="text-align:center;">Female</h2>
+  <table style="width:100%">
+    <tr>
+      <th>Wave #</th>
+      <th>Athlete #</th>
+      <th>Last Name</th>
+      <th>First Name</th>
+      <th>Awards</th>
+      <th>Swim </br>Lengths</th>
+      <th>Bike Miles</th>
+      <th>Run Laps</th>
+      <th>Total Distance </br>(appx)</th>
+      <th>Total Weighted <br>Result</th>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>8</td>
+      <td>Jara</td>
+      <td>Katrina</td>
+      <td>#1 W. Overall</td>
+      <td>38</td>
+      <td>13.3</td>
+      <td>12.25</td>
+      <td>16.39</td>
+      <td>25.10</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>14</td>
+      <td>Chang</td>
+      <td>Elizabeth</td>
+      <td></td>
+      <td>38</td>
+      <td>14.6</td>
+      <td>10.75</td>
+      <td>17.38</td>
+      <td>24.81</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>13</td>
+      <td>McGevna</td>
+      <td>Moira</td>
+      <td>#1 W. Bike</td>
+      <td>38</td>
+      <td>15.1</td>
+      <td>10</td>
+      <td>17.72</td>
+      <td>24.60</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>24</td>
+      <td>Reimer</td>
+      <td>Kaiya</td>
+      <td></td>
+      <td>37</td>
+      <td>11.4</td>
+      <td>10</td>
+      <td>14.01</td>
+      <td>22.46</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>3</td>
+      <td>Demirel</td>
+      <td>Alina</td>
+      <td>#1 W. Swim</td>
+      <td>40</td>
+      <td>10.6</td>
+      <td>9.25</td>
+      <td>13.10</td>
+      <td>22.44</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>27</td>
+      <td>Weiss</td>
+      <td>Dana</td>
+      <td>#1 W. Run</td>
+      <td>31</td>
+      <td>12.5</td>
+      <td>11</td>
+      <td>15.23</td>
+      <td>21.93</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>23</td>
+      <td>Reimer</td>
+      <td>Michele</td>
+      <td></td>
+      <td>26</td>
+      <td>13.1</td>
+      <td>10</td>
+      <td>15.55</td>
+      <td>20.19</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>28</td>
+      <td>Weiss</td>
+      <td>Alyssa</td>
+      <td></td>
+      <td>33</td>
+      <td>11.2</td>
+      <td>7.5</td>
+      <td>13.23</td>
+      <td>19.66</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>1</td>
+      <td>Brillana</td>
+      <td>Castillo</td>
+      <td></td>
+      <td>26</td>
+      <td>11.7</td>
+      <td>10.25</td>
+      <td>14.20</td>
+      <td>19.64</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>11</td>
+      <td>Loftig</td>
+      <td>Ronni</td>
+      <td></td>
+      <td>19</td>
+      <td>12.2</td>
+      <td>10.5</td>
+      <td>14.66</td>
+      <td>18.06</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>9</td>
+      <td>Klein</td>
+      <td>Colleen</td>
+      <td></td>
+      <td>27</td>
+      <td>11.4</td>
+      <td>7.5</td>
+      <td>13.35</td>
+      <td>18.06</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>4</td>
+      <td>Marybeth</td>
+      <td>Drabik</td>
+      <td></td>
+      <td>24</td>
+      <td>10.6</td>
+      <td>7.25</td>
+      <td>12.45</td>
+      <td>16.65</td>
+    </tr>
+
+  </table>
+</br>
+  <p>Total Weighted Results = 20 x swim mileage + 0.5 x bike mileage + 3 x run mileage</p></br>
+  <p>Pictures will be posted in an image gallery soon. Until then, they are available on google drive for viewing and download : <a href ="https://drive.google.com/drive/folders/0B0pgFKXtEdkLRzFPRGx5cnp1QXc?usp=sharing">Google Drive</a></p>
+
 </div>
 </div>
