--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -4,6 +4,19 @@
 <div class ="row">
     <div class ="col-md-8">
       <h1>Recent Updates</h1>
+      <p><b>November 13, 2016</b></p>
+      <div class ="imgwrapper">
+        <img src ="img/RU_IndoorTri2016All.png" style ="margin:0; width:100%;">
+        <div class='description'>
+        <!-- description content -->
+        <!-- end description content -->
+        </div>
+      </div>
+</br>
+
+      <p>This weekend the Rutgers Triathlon team hosted the first Rutgers Indoor Triathlon at the Werblin Recreation Center! We had 17 athletes come out, some doing their first race and others seasoned triathletes! We had a great time hosting and volunteering, and hope everyone enjoyed the event. Congratulations to all athletes who participated in the event! We hope to see you next year! </br></br>
+      Check out the <a href ="RU_indoortriathlon.html#results">results</a> here!</p></br>
+
       <p><b>November 4, 2016</b></p>
       <div class ="imgwrapper">
     		<img src ="img/RU_IndoorTriFlyer.jpg" width="80%">
